# neuralwarden

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  main.py  pyproject.toml
.github/workflows/: deploy.yml
api/: auth.py  cloud_database.py  database.py  db.py  encryption.py  gcp_logging.py  gcp_scanner.py  github_scanner.py  main.py  pdf_generator.py  pentests_database.py  repo_database.py  sast_scanner.py  sca_scanner.py  schemas.py  secret_patterns.py  services.py  services_stream.py
api/routers/: analyze.py  clouds.py  export.py  gcp_logging.py  generator.py  hitl.py  pentests.py  reports.py  repos.py  samples.py  stream.py  threat_intel.py  watcher.py
data/: cve_seeds.json
deploy/: setup-gcp.sh
docs/: API.md  ARCHITECTURE.md  VISION.md
docs/plans/: 2026-02-19-cloud-monitoring-design.md  2026-02-19-cloud-monitoring-impl.md  2026-02-19-correlation-classify-design.md  2026-02-19-correlation-classify-impl.md  2026-02-19-super-agent-design.md  2026-02-19-super-agent-impl.md
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
models/: __init__.py  incident_report.py  log_entry.py  threat.py
pipeline/: cloud_scan_graph.py  cloud_scan_state.py  graph.py  metrics.py  notifications.py  security.py  state.py  vector_store.py  watcher.py
rules/: detection.py
sample_logs/: brute_force.txt  clean_logs.txt  data_exfiltration.txt  mixed_threats.txt
scripts/: attack_generator.py  seed_pinecone.py
tests/: test_active_scanner.py  test_auth.py  test_burst.py  test_classify.py  test_cloud_database.py  test_cloud_router.py  test_cloud_scan_graph.py  test_cloud_scan_state.py  test_clouds_router.py  test_correlation_engine.py  test_database.py  test_detect.py  test_gcp_logging.py  test_gcp_router.py  test_gcp_scanner.py  test_generator.py  test_hitl.py  test_ingest.py  test_log_analyzer.py  test_notifications.py  test_pdf.py  test_pentests_router.py  test_pii.py  test_pipeline.py  test_report.py  test_repos_router.py  test_simple_routers.py  test_stream.py  test_threat_intel_api.py  test_validate.py  test_vector_store.py  test_watcher.py
(+98 files in other folders)
