[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pipeline*", "models*", "rules*", "scripts*"]

[project]
name = "neuralwarden"
version = "2.0.0"
description = "NeuralWarden — AI-Powered Cloud Security Platform"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "pydantic>=2.0",
    "pinecone-client>=5.0.0",
    "langchain-pinecone>=0.2.0",
    "gradio>=5.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "sse-starlette>=2.0.0",
    "fpdf2>=2.7.0",
    "watchdog>=4.0.0",
    "PyJWT>=2.8.0",
    "slowapi>=0.1.9",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
gcp = [
    "google-cloud-logging>=3.9.0",
    "google-cloud-compute>=1.0.0",
    "google-cloud-storage>=2.0.0",
    "google-cloud-resource-manager>=1.0.0",
    "google-auth>=2.0.0",
    "psycopg2-binary>=2.9.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
neuralwarden = "main:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
